<resources>
    <string name="app_name">TipCalcMiller</string>
    <string name="billTotal">Bill Total</string>
    <string name="zero">0.00</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="custom">Custom</string>
    <string name="zero_percent">0%</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="twenty_percent">20%</string>
</resources>
